--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,15 @@ bs4==0.0.1
 certifi==2019.11.28
 chardet==3.0.4
 cycler==0.10.0
+dj-database-url==0.5.0
 Django==3.0.3
+django-heroku==0.3.1
 gunicorn==20.0.4
 idna==2.9
 kiwisolver==1.1.0
 matplotlib==3.1.3
 numpy==1.18.1
+psycopg2==2.8.4
 pyparsing==2.4.6
 python-dateutil==2.8.1
 pytz==2019.3
@@ -18,3 +21,4 @@ six==1.14.0
 soupsieve==2.0
 sqlparse==0.3.1
 urllib3==1.25.8
+whitenoise==5.0.1
